Fixed Java 17 deprecation warnings (#349)
* test/regression/src/main/java/org/jacorb/test/harness/CallbackTestCase.java: