@@ -275,7 +275,7 @@ public class CallbackTestCase extends ClientServerTestCase
          */
         public void assertEquals(String message, byte expected, byte actual)
         {
-            assertEquals(message, new Byte(expected), new Byte(actual));
+            assertEquals(message, Byte.valueOf(expected), Byte.valueOf(actual));
         }
 
         /**
@@ -285,8 +285,8 @@ public class CallbackTestCase extends ClientServerTestCase
         {
             assertEquals(
                 message,
-                new Character(expected),
-                new Character(actual));
+                Character.valueOf(expected),
+                Character.valueOf(actual));
         }
 
         /**
@@ -306,16 +306,16 @@ public class CallbackTestCase extends ClientServerTestCase
                 if (!(expected == actual))
                     failNotEquals(
                         message,
-                        new Double(expected),
-                        new Double(actual));
+                        Double.valueOf(expected),
+                        Double.valueOf(actual));
             }
             else if (
                 !(Math.abs(expected - actual) <= delta))
                 // Because comparison with NaN always returns false
                 failNotEquals(
                     message,
-                    new Double(expected),
-                    new Double(actual));
+                    Double.valueOf(expected),
+                    Double.valueOf(actual));
         }
 
         /**
@@ -335,11 +335,11 @@ public class CallbackTestCase extends ClientServerTestCase
                 if (!(expected == actual))
                     failNotEquals(
                         message,
-                        new Float(expected),
-                        new Float(actual));
+                        Float.valueOf(expected),
+                        Float.valueOf(actual));
             }
             else if (!(Math.abs(expected - actual) <= delta))
-                failNotEquals(message, new Float(expected), new Float(actual));
+                failNotEquals(message, Float.valueOf(expected), Float.valueOf(actual));
         }
 
         /**
@@ -347,7 +347,7 @@ public class CallbackTestCase extends ClientServerTestCase
          */
         public void assertEquals(String message, int expected, int actual)
         {
-            assertEquals(message, new Integer(expected), new Integer(actual));
+            assertEquals(message, Integer.valueOf(expected), Integer.valueOf(actual));
         }
 
         /**
@@ -355,7 +355,7 @@ public class CallbackTestCase extends ClientServerTestCase
          */
         public void assertEquals(String message, long expected, long actual)
         {
-            assertEquals(message, new Long(expected), new Long(actual));
+            assertEquals(message, Long.valueOf(expected), Long.valueOf(actual));
         }
 
         /**
@@ -379,7 +379,7 @@ public class CallbackTestCase extends ClientServerTestCase
          */
         public void assertEquals(String message, short expected, short actual)
         {
-            assertEquals(message, new Short(expected), new Short(actual));
+            assertEquals(message, Short.valueOf(expected), Short.valueOf(actual));
         }
 
         /**
@@ -390,7 +390,7 @@ public class CallbackTestCase extends ClientServerTestCase
             boolean expected,
             boolean actual)
         {
-            assertEquals(message, new Boolean(expected), new Boolean(actual));
+            assertEquals(message, Boolean.valueOf(expected), Boolean.valueOf(actual));
         }
 
         /**
